--- a/lafacustorev2.csproj
+++ b/lafacustorev2.csproj
@@ -21,6 +21,7 @@
     
      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.3" />
      <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.2" />
+     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
 
   </ItemGroup>
 
