--- a/lafacustorev2.csproj
+++ b/lafacustorev2.csproj
@@ -17,6 +17,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.4" />
     <!--PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.4" /-->
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.4" />
+    <PackageReference Include="Microsoft.Extensions.ML" Version="2.0.0" />
+    <PackageReference Include="Microsoft.ML" Version="2.0.0" />
+    <PackageReference Include="Microsoft.ML.LightGbm" Version="2.0.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
     
      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.3" />
